GNOME Bugzilla – Bug 698846
Invalid IconView preferred size when cleaning sorted view
Last modified: 2013-05-03 11:06:39 UTC
Created attachment 242423 [details] test script The attached test script raises the following warning. Patch on its way. (a.out:10268): Gtk-WARNING **: GtkIconView 0x12aa110 reported min size 24 and natural size 6 in get_preferred_width(); natural size must be >= min size
Created attachment 242425 [details] [review] treemodelsort: destroy the root only if we are removing the latest row of the level GtkIconView doesn't ref the rows of the model so we have to make sure that a level is actually empty before destroying it.
This issue seems related to commit f94e21be431127aa540accc55ced8a02967ca604 from Matthias Clasen, since 2004... CCing him.
I can't say I have any recollection of that change or of the treemodelsort code in general. The testcase makes sense, and the patch fixes it, and doesn't seem to break any of our other treeview test cases.
Should I just merge this fix or should I wait for a proper review of the patch?
Merged to master. Attachment 242425 [details] pushed as c15a787 - treemodelsort: destroy the root only if we are removing the latest row of the level